# vitae

./: .gitignore  .tool-versions  README.md  package-lock.json  package.json
app/: index.html  main.js
native/: Cargo.toml
native/src/: handlers.rs  lib.rs
src-frontend/: package-lock.json  package.json
src-tauri/: tauri.conf.json
